Murphy System/outputs/workspace_output_1769724380_713.txt
Fixed HTML entities in murphy_complete_integrated.py
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/py_compile.py", line 144, in compile
    code = loader.source_to_code(source_bytes, dfile or file,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "murphy_complete_integrated.py", line 1923
    &quot;&quot;&quot;Generate decision gates dynamically for a task&quot;&quot;&quot;
    ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<stdin>", line 19, in <module>
  File "/usr/local/lib/python3.11/py_compile.py", line 150, in compile
    raise py_exc
py_compile.PyCompileError:   File "murphy_complete_integrated.py", line 1923
    &quot;&quot;&quot;Generate decision gates dynamically for a task&quot;&quot;&quot;
    ^
SyntaxError: invalid syntax

